[gd_scene load_steps=6 format=1]

[ext_resource path="res://shot.gd" type="Script" id=1]
[ext_resource path="res://orange.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.238085, 0.881885, 0.983902, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("hit_splash:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="shot" type="Area2D"]

transform/pos = Vector2( 0, 0.663422 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.866467, 0, 0, 0.872599, -0.161758, -0.647064 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 2
script/script = ExtResource( 1 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( 1.8353, -0.0742126 )
transform/scale = Vector2( 1.54149, 0.770745 )
rect = Rect2( -10, -10, 20, 20 )

[node name="sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0.389824, 0.0710217 )
texture = ExtResource( 2 )

[node name="hit_splash" type="Particles2D" parent="."]

visibility/visible = false
config/amount = 20
config/lifetime = 1.0
config/time_scale = 1.02
config/preprocess = 0.1
config/process_mode = 1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 50.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/splash = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="."]

rect/rotation = 0.672275
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 10.0
margin/right = 118.0
margin/bottom = 24.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="saraf" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.161758, -0.647064 )
transform/scale = Vector2( 0.866467, 0.872599 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_enter" from="." to="." method="_on_shot_area_enter"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


